# tox

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  kiri.md
.zed/: debug.json  launch.json  settings.json  tasks.json
examples/: test.tox
include/: ast.h  interpreter.h  parser.h  scanner.h  token.h  tox.h
src/: ast.cpp  ast.h  interpreter.cpp  main.cpp  parser.cpp  parser.h  scanner.cpp  scanner.h  token.cpp  token.h  tox.cpp
